--- a/src/app/settings/settings.css
+++ b/src/app/settings/settings.css
@@ -60,6 +60,12 @@
 .settings .group {
   margin-top: 10px;
 }
+/* input blocker */
+.settings .inputBlocker {
+  position: absolute;
+  width: 100%;
+  height: 300px;
+}
 /* select */
 .settings .wrap-dd-select {
   margin: 0px;
@@ -75,7 +81,7 @@
   margin-top: 6px;
 }
 .settings .wrap-dd-select .dropdown {
-  z-index: 10;
+  z-index: 6000;
 }
 /* toggle */
 .settings .item-toggle {
