--- a/src/app/splash/splash.css
+++ b/src/app/splash/splash.css
@@ -1,4 +1,4 @@
-.home {
+.splash {
   height: 100%;
   width: 100%;
   overflow: hidden;
@@ -7,7 +7,7 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
-.home .settingsIcon {
+.splash .settingsIcon {
   position: absolute;
   color: white;
   bottom: 20px;
