--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,4 +1,4 @@
 <ion-view>
-  <ion-content class="home" style="background-image: url('app/home/home.jpg')" scroll="false" ng-controller="HomeCtrl">
+  <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
   </ion-content>
 </ion-view>
