feat(splashscreen): add title text

--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,4 +1,5 @@
 <ion-view>
   <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
+    <div class="titleText">Hello Mum&#8482;</div>
   </ion-content>
 </ion-view>
