--- a/src/app/splash/splash.css
+++ b/src/app/splash/splash.css
@@ -7,10 +7,11 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
-.splash .settingsIcon {
-  position: absolute;
+.splash .titleText {
+  width: 100%;
+  margin-top: 50%;
   color: white;
-  bottom: 20px;
-  left: 20px;
-  font-size: 3em;
+  text-align: center;
+  font-size: 16px;
+  font-size: 10vw; 
 }
