feat(splashscreen): localise splash screen

--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,6 +1,6 @@
 <ion-view>
   <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
-    <div class="titleText">Hello Mum</div>
+    <div class="titleText">{{'APP_TITLE' | translate}}</div>
     <div class="copyText">&copy 2015 Ghost Wording Limited.</div>
   </ion-content>
 </ion-view>
