--- a/src/app/genderselect/genderselect.css
+++ b/src/app/genderselect/genderselect.css
@@ -1,5 +1,6 @@
 .genderSelect .titleLabel {
   font-family: 'notoserif-italic';
+  font-size: 1.4em;
   color: white;
 }
 .genderSelect .genderButton {
@@ -8,5 +9,6 @@
 }
 .genderSelect .genderLabel {
   color: white;
+  font-size: 1.2em;
   font-family: 'notoserif-italic';
 }
