feat(connectivity): go back to splash on language change

--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -1,6 +1,6 @@
 <div class="settings" ng-controller="SettingsCtrl" style="position:relative">
   <!-- close button -->
-  <div class="closeButtonHit" ng-click="close()">
+  <div class="closeButtonHit" ng-click="closeButtonClick()">
     <div class="closeButton icon ion-close-round"></div>
   </div>
   <ion-tabs class="tabs-light">
