--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,6 +1,8 @@
 <ion-view>
   <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
     <div class="titleText">{{'APP_TITLE' | translate}}</div>
+    <div class="spinner icon ion-load-c"></div>
+    <div class="connectivityText" ng-if="showConnectivityMessage">{{'CONNECTIVITY' | translate}}</div>
     <div class="copyText">&copy {{year}} GhostWording</div>
   </ion-content>
 </ion-view>
