--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,4 +1,4 @@
-<ion-view>
+<ion-view cache-view="false">
   <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
     <div class="titleText">{{'APP_TITLE' | translate}}</div>
     <div class="spinner icon ion-load-c"></div>
