feat(connectivity): dont cache view

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -1,4 +1,4 @@
-<ion-view class="textSelect" ng-controller="TextSelectCtrl">
+<ion-view class="textSelect" ng-controller="TextSelectCtrl" cache-view="false">
   <!-- gender select popup -->
   <gw-mob-popup class="genderSelectPopup" ng-if="genderSelectPopupVisible">
     <gw-mob-genderselect
