--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -88,7 +88,7 @@
           dropdown-select="languages" 
           dropdown-model="language"
           dropdown-item-label="text"
-          dropdown-onchange="languageChanged(selected)">
+          dropdown-onchange="languageSelected(selected)">
         </div>
       </div>
     </ion-tab>
