feat(splashfixes): black background

--- a/src/app/splash/splash.part.html
+++ b/src/app/splash/splash.part.html
@@ -1,5 +1,5 @@
-<ion-view cache-view="false">
-  <ion-content class="splash" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
+<ion-view class="splash" cache-view="false">
+  <ion-content class="splashContent" style="background-image: url('app/splash/splash.png')" scroll="false" ng-controller="SplashCtrl">
     <div class="titleText">{{'APP_TITLE' | translate}}</div>
     <div class="spinner icon ion-load-c"></div>
     <div class="connectivityText" ng-if="showConnectivityMessage">{{'CONNECTIVITY' | translate}}</div>
