--- a/src/app/splash/splash.css
+++ b/src/app/splash/splash.css
@@ -1,6 +1,9 @@
 .splash {
   height: 100%;
   width: 100%;
+  background-color: black;
+}
+.splashContent {
   overflow: hidden;
   background-size: cover;
   background-repeat: no-repeat; 
