--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -136,6 +136,9 @@
   width: 40px;
   height: 40px;
 }
+.textSelect .popupt {
+  background-color: rgba(10,69,110,0.75);
+}
 .textSelect .bottomBar {
   position: absolute;
   display: flex;
