--- a/src/app/settings/settings.css
+++ b/src/app/settings/settings.css
@@ -1,21 +1,20 @@
 .settings {
   width: 100%;
-  height: 100%;
   background-color: white;
   font-family: 'notoserif-italic';
 }
 .settings {
   color: #aaaaaa;
+  height: 100%;
 }
 /* close button */
 .settings .closeButtonHit {
-  position: absolute;
-  right: 0px;
   z-index: 200;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-left: 15px;
-  padding-right: 10px;
+  padding-top: 25px;
+  padding-bottom: 0px;
+  padding-left: 20px;
+  padding-right: 15px;
+  float: right;
 }
 .settings .closeButton {
   width: 40px;
@@ -29,7 +28,8 @@
 }
 /* tabs */
 .settings .tabs {
-  top: 60px;
+  clear: both;
+  position: static;
   height: 80px;
   background-color: transparent;
   border: none !important;
@@ -58,6 +58,7 @@
 }
 .settings .tabs .tab-item-active .icon {
   font-size: 1.7em;
+  position: static;
   color: #339ee6;
 }
 .settings .tab-title {
@@ -82,6 +83,7 @@
 .settings .pane {
   height: auto;
   overflow: visible;
+  position: static;
 }
 .settings .group {
   margin-top: 10px;
@@ -89,8 +91,8 @@
 /* input blocker */
 .settings .inputBlocker {
   position: absolute;
-  width: 100%;
-  height: 300px;
+  width: 60%;
+  height: 150px;
 }
 /* select */
 .settings .wrap-dd-select {
