feat(looseends): scale text to suit device

--- a/src/app/splash/splash.css
+++ b/src/app/splash/splash.css
@@ -16,9 +16,8 @@
   width: 100%;
   color: white;
   text-align: center;
+  font-size: 9vw; 
   font-family: 'notosans-bold';
-  font-size: 40px; 
-  text-shadow: 2px 2px 5px rgba(0,0,0,0.1);
 }
 .splash .spinner {
   position: absolute;
@@ -26,7 +25,7 @@
   width: 100%;
   text-align: center;
   color: white;
-  font-size: 50px; 
+  font-size: 10vw; 
   animation-name: spin;
   animation-duration: 1000ms;
   animation-iteration-count: infinite;
