refact(*): rename textselect to home

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,4 +1,6 @@
-<ion-view class="textSelect" ng-controller="TextSelectCtrl" cache-view="false">
+<ion-view class="home" cache-view="false">
+  <!-- sub view injection point -->
+  <div ui-view></div>
   <!-- gender select popup -->
   <gw-mob-popup class="genderSelectPopup" ng-if="genderSelectPopupVisible">
     <gw-mob-genderselect
