--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,10 +1,10 @@
-.textSelect {
+.home {
 }
-.textSelect .titleContainer {
+.home .titleContainer {
   text-align: center;
   width: 100%;
 }
-.textSelect .title {
+.home .title {
   display: inline-block;
   white-space: nowrap;
   padding-left: 15px;
@@ -16,7 +16,7 @@
   font-size: 1em;
   color: #339ee6;
 }
-.textSelect .text {
+.home .text {
   padding-top: 40px;  
   padding-bottom: 100px;
   padding-left: 40px;
@@ -28,16 +28,16 @@
   color: #001f46; 
   opacity: 0.7;
 } 
-.textSelect .author {
+.home .author {
   margin-top: 10px;
   font-size: 0.9em;
   opacity: 0.7;
 } 
-.textSelect .imageContainer {
+.home .imageContainer {
   width: 100%;
   position: relative;
 }
-.textSelect .image {
+.home .image {
   width: 100%;
   height: 100%;
   -webkit-background-size: cover;
@@ -48,7 +48,7 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
-.textSelect .moreImagesText {
+.home .moreImagesText {
   position: absolute;
   top: 0px;
   left: 0px;
@@ -66,46 +66,46 @@
   align-content: center;
   flex-direction: column;
 }
-.textSelect .swipeArrow {
+.home .swipeArrow {
   position: absolute;
   color: #339ee6;
   font-size: 50px;
   z-index: 3000;
 }
-.textSelect .swipeArrowLeft {
+.home .swipeArrowLeft {
   left: 10px;
 }
-.textSelect .swipeArrowRight {
+.home .swipeArrowRight {
   right: 10px;
 }
-.textSelect .dotIndicatorContainer {
+.home .dotIndicatorContainer {
   position: absolute;
   width: 100%;
   z-index: 1000;
   pointer-events: none;
 }
-.textSelect .dotIndicatorCenter {
+.home .dotIndicatorCenter {
   float: right;
   right: 50%;
   position: relative;
 }
-.textSelect .dotIndicator {
+.home .dotIndicator {
   float: right;
   right: -50%;
   position: relative;
 }
-.textSelect .dotIndicator .dot {
+.home .dotIndicator .dot {
   margin-left: 2px;
   margin-right: 2px;
   font-size: 18px;
   opacity: 0.15;
   color: black;
 }
-.textSelect .dotIndicator .currentDot {
+.home .dotIndicator .currentDot {
   color: #339ee6;
   opacity: 1;
 }
-.textSelect .settingsButtonHit {
+.home .settingsButtonHit {
   position: absolute;
   z-index: 200;
   padding-top: 30px;
@@ -113,7 +113,7 @@
   padding-left: 15px;
   padding-right: 50px;
 }
-.textSelect .settingsButton {
+.home .settingsButton {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -124,7 +124,7 @@
   vertical-align: center;
   text-align: center;
 }
-.textSelect .debugButton {
+.home.debugButton {
   position: absolute;
   top: 30px;
   right: 15px;
@@ -132,10 +132,10 @@
   width: 40px;
   height: 40px;
 }
-.textSelect .popupt {
+.home .popupt {
   background-color: rgba(6,42,66,0.75);
 }
-.textSelect .bottomBar {
+.home .bottomBar {
   position: absolute;
   display: flex;
   bottom: 0px;
@@ -147,7 +147,7 @@
   background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 25%, rgba(255,255,255,1) 100%);
   pointer-events: none;
 }
-.textSelect .bottomBar .sendButtonHit {
+.home .bottomBar .sendButtonHit {
   padding-top: 20px;
   padding-bottom: 15px;
   margin-left: 50px;
@@ -155,7 +155,7 @@
   flex: 1;
   pointer-events: all;
 }
-.textSelect .bottomBar .sendButton {
+.home .bottomBar .sendButton {
   border-radius: 3px;
   width: 100%;
   background-color: #339ee6;
@@ -167,7 +167,7 @@
   vertical-align: center;
   font-family: 'notoserif-italic';
 }
-.textSelect .bottomBar .likeDislikeButton {
+.home .bottomBar .likeDislikeButton {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -179,18 +179,18 @@
   text-align: center;
   pointer-events: all;
 }
-.textSelect .send {
+.home .send {
   margin-top: 150px;
 }
-.textSelect .contactPopup .popupContent {
+.home .contactPopup .popupContent {
   width: 90%;
 }
-.textSelect .contact {
+.home .contact {
   margin-top: 50px;
   background-color: white;
   border-radius: 8px;
 }
-.textSelect .popupButtonHit {
+.home .popupButtonHit {
   display: block;
   width: 200px;
   margin-left: auto;
@@ -198,7 +198,7 @@
   padding-top: 10px;
   padding-bottom: 10px;
 }
-.textSelect .popupButton {
+.home .popupButton {
   border-radius: 3px;
   background-color: #339ee6;
   width: 100%;
@@ -210,16 +210,9 @@
   text-align: center;
   font-family: 'notoserif-italic';
 }
-.textSelect .pad {
+.home .pad {
   margin-top: 30px;
 }
-.textSelect .contact {
+.home .contact {
   padding: 20px;
-}
-.textSelect .textPopup {
-  padding-top: 80px;
-  font-size: 1.25em;
-  font-family: 'notoserif-italic';
-  text-align: center;
-  color: white;
 }
