--- a/src/app/state/home/home.part.html
+++ b/src/app/state/home/home.part.html
@@ -124,7 +124,7 @@
           <!-- eof text -->
           <div class="moreImagesText">{{'EOF_IMAGE' | translate}}</div>
           <!-- eof image -->
-          <div class="image" style="background-image:url('app/home/eof.jpg')"></div>
+          <div class="image" style="background-image:url('app/state/home/eof.jpg')"></div>
         </div>
       </gw-mob-eof>
     </gw-mob-fixedslider>
