--- a/src/app/state/splash/splash.part.html
+++ b/src/app/state/splash/splash.part.html
@@ -1,4 +1,7 @@
 <ion-view class="splash" cache-view="false">
+  <!-- gender select injection point -->
+  <div ui-view></div>
+  <!-- splash content -->
   <ion-content class="splashContent" style="background-image: url('app/global/splash/splash.png')" scroll="false">
     <div class="titleText">{{'APP_TITLE' | translate}}</div>
     <div class="spinner icon ion-load-c"></div>
