refact(app): move state declarations into state directories

--- a/src/app/state/debug/debug.part.html
+++ b/src/app/state/debug/debug.part.html
@@ -1,4 +1,4 @@
-<ion-view class="debug" ng-controller="DebugCtrl">
+<ion-view class="debug">
   <ion-header-bar align-title="left" class="bar-dark">
     <div class="buttons">
       <button class="button" ng-click="backButtonClick()">Back</button>
