refact(home): rename popup directives

--- a/src/app/state/home/sendmethod/sendmethod.part.html
+++ b/src/app/state/home/sendmethod/sendmethod.part.html
@@ -1,4 +1,4 @@
-<gw-mob-sendmethod
+<gw-mob-popup-sendmethod
   sendemaillabel="{{'SND_EMAIL' | translate}}"
   sendsmslabel="{{'SND_SMS' | translate}}"
   sendfacebooklabel="{{'SND_FB' | translate}}"
@@ -8,4 +8,4 @@
   sendfacebook="sendFacebook()"
   showsendfacebook="false"
   cancel="cancel()">
-</gw-mob-sendmethod>
+</gw-mob-popup-sendmethod>
