--- a/src/app/state/home/smswarn/smswarn.part.html
+++ b/src/app/state/home/smswarn/smswarn.part.html
@@ -1,4 +1,4 @@
-<gw-mob-smswarn
+<gw-mob-popup-smswarn
   warninglabel="{{'SMS_IMAGE_WARN' | translate}}"
   smslabel="{{'SEND_TEXT_ONLY' | translate}}"
   emaillabel="{{'SEND_BY_EMAIL' | translate}}"
@@ -6,4 +6,4 @@
   sendsms="sendSMS()"
   sendemail="sendEmail()"
   cancel="cancel()">
-</gw-mob-smswarn>
+</gw-mob-popup-smswarn>
