--- a/src/app/state/splash/genderselect/genderselect.part.html
+++ b/src/app/state/splash/genderselect/genderselect.part.html
@@ -1,7 +1,7 @@
-<gw-mob-genderselect
+<gw-mob-popup-genderselect
   titletext="{{'I_AM' | translate}}"
   maletext="{{'A_MAN' | translate}}"
   femaletext="{{'A_WOMAN' | translate}}"
   maleselected="genderSelected('Male')"
   femaleselected="genderSelected('Female')">
-</gw-mob-genderselect>
+</gw-mob-popup-genderselect>
