--- a/src/app/state/settings/settings.part.html
+++ b/src/app/state/settings/settings.part.html
@@ -1,4 +1,4 @@
-<div class="settings">
+<div class="settings" cache-view="false">
   <!-- close button -->
   <div class="closeButtonHit" ng-click="closeButtonClick()">
     <div class="closeButton icon ion-close-round"></div>
