refact(home): fix debug button style

--- a/src/app/state/home/home.css
+++ b/src/app/state/home/home.css
@@ -97,8 +97,9 @@
   vertical-align: center;
   text-align: center;
 }
-.home.debugButton {
+.home .debugButton {
   position: absolute;
+  z-index: 200;
   top: 30px;
   right: 15px;
   z-index: 200;
