--- a/src/app/state/home/smswarn/smswarn.part.html
+++ b/src/app/state/home/smswarn/smswarn.part.html
@@ -3,7 +3,7 @@
   smslabel="{{'SEND_TEXT_ONLY' | translate}}"
   emaillabel="{{'SEND_BY_EMAIL' | translate}}"
   cancellabel="{{'CANCEL' | translate}}"
-  sendsms="sendSMS()"
-  sendemail="sendEmail()"
+  smsselected="smsSelected()"
+  emailselected="emailSelected()"
   cancel="cancel()">
 </gw-mob-popup-smswarn>
