refact(settings): make settings a child state of home

--- a/src/app/state/home/settings/settings.part.html
+++ b/src/app/state/home/settings/settings.part.html
@@ -1,4 +1,4 @@
-<div class="settings" cache-view="false">
+<gw-mob-popup class="settings" cache-view="false">
   <!-- close button -->
   <div class="closeButtonHit" ng-click="closeButtonClick()">
     <div class="closeButton icon ion-close-round"></div>
@@ -111,4 +111,4 @@
     </ion-tab>
     -->
   </ion-tabs>
-</div>
+</gw-mob-popup>
